explore more spring boot configuration using application properties file

--- a/01-spring-boot-overview/06-properties-demo/src/main/resources/application.properties
+++ b/01-spring-boot-overview/06-properties-demo/src/main/resources/application.properties
@@ -15,3 +15,11 @@ info.app.version=1.0.0
 
 coach.name=Mickey Mouse
 team.name=The Mouse Club
+
+# Change spring boot port
+
+server.port=7070
+
+# Configure application context path
+
+server.servlet.context-path=/mycoolapp
