--- a/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/cruddemo/src/main/resources/application.properties
+++ b/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/cruddemo/src/main/resources/application.properties
@@ -3,3 +3,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+# Spring data REST properties
+
+spring.data.rest.base-path=/magic-api
