--- a/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/cruddemo/src/main/resources/application.properties
+++ b/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/cruddemo/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=springstudent
 # Spring data REST properties
 
 spring.data.rest.base-path=/magic-api
+spring.data.rest.default-page-size=3
