Pratice to use Spring MVC Form data binding on Check Boxes without hard coding for options(use properties file). Steps: 1. Add list of systems to application.properties file 2. Inject the systems in the StudentController using @Value 3. Add the list of systems to the model 4. In HTML form, generate list of <input> tags for the systems

--- a/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/application.properties
+++ b/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 countries=Brazil,France,Germany,India,Mexico,Spain,United States,China
 languages=C++,Java,Go,Python,Rust
+systems=macOS,Linux,Microsoft Windows,Android OS,iOS
