--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/application.properties
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# JDBC Properties
 
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+# Log JDBC SQL statements
+# Only use this for dev/testing
+
+logging.level.org.springframework.jdbc.core=TRACE
